--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sensive Blog - Home</title>
-    <link rel="icon" href="{% static 'img\favicon.png' %}" type="image/png">
-    <link rel="stylesheet" href="{% static 'css\styles.min.css' %}">
+    <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
+    <link rel="stylesheet" href="{% static 'css/styles.min.css' %}">
   </head>
   <body>
     <!--================Header Menu Area =================-->
@@ -40,7 +40,6 @@
       </div>
     </header>
     <!--================Header Menu Area =================-->
-
     <main class="site-main">
       <!--================Hero Banner start =================-->
       <section class="mb-30px">
@@ -60,41 +59,19 @@
       <section>
         <div class="container">
           <div class="d-flex">
+            {% for post in most_popular_posts|slice:":3" %}
             <div class="flex-fill" style="margin-right: 30px;">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
-                  <img class="card-img rounded-0" src="{% static 'img/blog/blog-slider/blog-slide1.png' %}" alt="">
+                  <img class="card-img rounded-0" src="{{ post.image_url }}" alt="{{ post.title }}">
                 </div>
                 <div class="blog__slide__content">
-                  <h3><a href="#">New york fashion week's continued the evolution</a></h3>
-                  <p>2 days ago</p>
+                  <h3><a href="#">{{ post.title }}</a></h3>
+                  <p>{{ post.published_at|date:"F d, Y, h:i a" }}</p>
                 </div>
               </div>
             </div>
-
-            <div class="flex-fill" style="margin-right: 30px;">
-              <div class="card blog__slide text-center">
-                <div class="blog__slide__img">
-                  <img class="card-img rounded-0" src="{% static 'img/blog/blog-slider/blog-slide2.png' %}" alt="">
-                </div>
-                <div class="blog__slide__content">
-                  <h3><a href="#">New york fashion week's continued the evolution</a></h3>
-                  <p>2 days ago</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="flex-fill">
-              <div class="card blog__slide text-center">
-                <div class="blog__slide__img">
-                  <img class="card-img rounded-0" src="{% static 'img/blog/blog-slider/blog-slide3.png' %}" alt="">
-                </div>
-                <div class="blog__slide__content">
-                  <h3><a href="#">New york fashion week's continued the evolution</a></h3>
-                  <p>2 days ago</p>
-                </div>
-              </div>
-            </div>
+            {% endfor %}
           </div>
         </div>
       </section>
@@ -105,70 +82,21 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
+              {% for post in fresh_posts %}
               <div class="single-recent-blog-post">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/blog1.png' %}" alt="">
+                  <img class="img-fluid" src="{{ post.image_url }}" alt="{{ post.title }}">
                   <ul class="thumb-info">
-                    <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
+                    <li><a href="#"><i class="ti-notepad"></i>{{ post.published_at|date:"F d, Y, h:i a" }}</a></li>
                   </ul>
                 </div>
                 <div class="details mt-20">
-                  <h3>Woman claims husband wants to name baby girl after his ex-lover sparking.</h3>
-                  <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
+                  <h3>{{ post.title }}</h3>
+                  <p>{{ post.text|truncatewords:30 }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
-
-              <div class="single-recent-blog-post">
-                <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/blog2.png' %}" alt="">
-                  <ul class="thumb-info">
-                    <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
-                  </ul>
-                </div>
-                <div class="details mt-20">
-                  <h3>Woman claims husband wants to name baby girl after his ex-lover sparking.</h3>
-                  <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
-                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
-                </div>
-              </div>
-
-              <div class="single-recent-blog-post">
-                <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/blog3.png' %}" alt="">
-                  <ul class="thumb-info">
-                    <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
-                  </ul>
-                </div>
-                <div class="details mt-20">
-                  <h3>Tourist deaths in Costa Rica jeopardize safe destination reputation all time. </h3>
-                  <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
-                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
-                </div>
-              </div>
-
-              <div class="single-recent-blog-post">
-                <div class="thumb">
-                  <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="">
-                  <ul class="thumb-info">
-                    <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
-                  </ul>
-                </div>
-                <div class="details mt-20">
-                <h3>Tourist deaths in Costa Rica jeopardize safe destination reputation all time.  </h3>
-                  <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
-                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
-                </div>
-              </div>
-
+              {% endfor %}
 
               <div class="row">
                 <div class="col-lg-12">
@@ -210,7 +138,6 @@
                   <button class="bbtns d-block mt-20 w-100">Subcribe</button>
                 </div>
 
-
                 <div class="single-sidebar-widget post-category-widget">
                   <h4 class="single-sidebar-widget" style="height:200px;">Здесь будет реклама</h4>
                 </div>
@@ -249,7 +176,6 @@
 
                     <input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
                       required="" type="email">
-
 
                     <button class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
                     <div style="position: absolute; left: -5000px;">
