--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,11 @@
             <div class="flex-fill" style="margin-right: 30px;">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
-                  <img class="card-img rounded-0" src="{{ post.image_url }}" alt="{{ post.title }}">
+                  {% if post.image_url %}
+                    <img class="card-img rounded-0" src="{{ post.image_url }}" alt="{{ post.title }}">
+                  {% else %}
+                    <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="{{ post.title }}">
+                  {% endif %}
                 </div>
                 <div class="blog__slide__content">
                   <h3><a href="#">{{ post.title }}</a></h3>
@@ -85,14 +89,20 @@
               {% for post in fresh_posts %}
               <div class="single-recent-blog-post">
                 <div class="thumb">
-                  <img class="img-fluid" src="{{ post.image_url }}" alt="{{ post.title }}">
+                  {% if post.image_url %}
+                    <img class="img-fluid" src="{{ post.image_url }}" alt="{{ post.title }}">
+                  {% else %}
+                    <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="{{ post.title }}">
+                  {% endif %}
                   <ul class="thumb-info">
+                    <li><a href="#"><i class="ti-user"></i>{{ post.author }}</a></li>
                     <li><a href="#"><i class="ti-notepad"></i>{{ post.published_at|date:"F d, Y, h:i a" }}</a></li>
+                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ post.comments_amount }} Comments</a></li>
                   </ul>
                 </div>
                 <div class="details mt-20">
                   <h3>{{ post.title }}</h3>
-                  <p>{{ post.text|truncatewords:30 }}</p>
+                  <p>{{ post.text }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
