--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Remake Barber - {{ post.title }}{% endblock %}
+{% block title %}{{ post.title }} - Blog Details{% endblock %}
 
 {% block content %}
     <!--================ Hero sm Banner start =================-->
